--- a/AutoFixture.Examples.Tests/AutoFixture.Examples.Tests.csproj
+++ b/AutoFixture.Examples.Tests/AutoFixture.Examples.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -19,6 +19,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AutoFIxture.Examples\AutoFIxture.Examples.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
